# char-index-skill

./: README.md  pyproject.toml
.claude-plugin/: plugin.json
skills/char-index-skill/: SKILL.md
