# MCP server (char-index-mcp) build config for PyPI distribution.
# This project (char-index-skill) is a Claude Skills project. See .claude-plugin/plugin.json.
[project]
name = "char-index-mcp"
version = "0.3.0"
description = "A Model Context Protocol server for character-level index-based string manipulation"
readme = "README.md"
authors = [
    {name = "agent-hanju", email = "agent.hanju@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]
keywords = ["mcp", "string-manipulation", "character-index", "text-processing", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/agent-hanju/char-index-skill"
Repository = "https://github.com/agent-hanju/char-index-skill"
Documentation = "https://github.com/agent-hanju/char-index-skill#readme"
Issues = "https://github.com/agent-hanju/char-index-skill/issues"
Source = "https://github.com/agent-hanju/char-index-skill"

[project.scripts]
char-index-mcp = "char_index_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["char_index_mcp"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"**/test_*.py" = ["E402", "I001"]}

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*", "char_index_mcp.tests.*"]
disallow_untyped_defs = false
